feat: query analysis modify feature

--- a/package.json
+++ b/package.json
@@ -280,6 +280,10 @@
         "title": "Explain"
       },
       {
+        "command": "dbtPowerUser.changeQuery",
+        "title": "Change"
+      },
+      {
         "command": "dbtPowerUser.sqlToModel",
         "title": "Convert to dbt Model (Preview feature)",
         "shortTitle": "Convert to dbt Model",
@@ -456,6 +460,11 @@
         "key": "shift+Ctrl+E",
         "mac": "shift+Cmd+E",
         "command": "dbtPowerUser.summarizeQuery"
+      },
+      {
+        "key": "shift+Ctrl+C",
+        "mac": "shift+Cmd+C",
+        "command": "dbtPowerUser.changeQuery"
       }
     ],
     "menus": {
@@ -467,6 +476,10 @@
         {
           "command": "dbtPowerUser.summarizeQuery",
           "group": "datapilot@2"
+        },
+        {
+          "command": "dbtPowerUser.changeQuery",
+          "group": "datapilot@3"
         }
       ],
       "editor/title": [
