--- a/package.json
+++ b/package.json
@@ -272,6 +272,21 @@
         }
       },
       {
+        "command": "dbtPowerUser.openDatapilotWithQuery",
+        "title": "Start Chat",
+        "category": "dbt Power User"
+      },
+      {
+        "command": "dbtPowerUser.summarizeQuery",
+        "title": "Explain",
+        "category": "dbt Power User"
+      },
+      {
+        "command": "dbtPowerUser.changeQuery",
+        "title": "Change",
+        "category": "dbt Power User"
+      },
+      {
         "command": "dbtPowerUser.sqlToModel",
         "title": "Convert to dbt Model (Preview feature)",
         "shortTitle": "Convert to dbt Model",
@@ -365,7 +380,22 @@
       },
       {
         "command": "dbtPowerUser.resetDatapilot",
-        "title": "Reset"
+        "title": "Start New Chat",
+        "icon": "$(add)",
+        "category": "dbt Power User"
+      },
+      {
+        "command": "dbtPowerUser.maximizeDatapilot",
+        "title": "Maximize",
+        "icon": {
+          "light": "./media/images/fullscreen-light.svg",
+          "dark": "./media/images/fullscreen-dark.svg"
+        }
+      },
+      {
+        "command": "dbtPowerUser.showHelpDatapilot",
+        "title": "Help",
+        "icon": "$(question)"
       },
       {
         "command": "dbtPowerUser.showCompiledSQL",
@@ -379,14 +409,6 @@
         "command": "dbtPowerUser.executeSQL",
         "title": "Execute dbt SQL",
         "icon": "$(play)"
-      },
-      {
-        "command": "dbtPowerUser.summarizeQuery",
-        "title": "Explain selected SQL (Preview feature)",
-        "icon": {
-          "light": "./media/images/lightbulb_light.svg",
-          "dark": "./media/images/lightbulb_dark.svg"
-        }
       },
       {
         "command": "dbtPowerUser.buildCurrentModel",
@@ -432,9 +454,38 @@
         "key": "Ctrl+'",
         "mac": "Cmd+'",
         "command": "dbtPowerUser.sqlPreview"
+      },
+      {
+        "key": "shift+Ctrl+A",
+        "mac": "shift+Cmd+A",
+        "command": "dbtPowerUser.openDatapilotWithQuery"
+      },
+      {
+        "key": "shift+Ctrl+E",
+        "mac": "shift+Cmd+E",
+        "command": "dbtPowerUser.summarizeQuery"
+      },
+      {
+        "key": "shift+Ctrl+C",
+        "mac": "shift+Cmd+C",
+        "command": "dbtPowerUser.changeQuery"
       }
     ],
     "menus": {
+      "dbtPowerUser.datapilotSubmenu": [
+        {
+          "command": "dbtPowerUser.openDatapilotWithQuery",
+          "group": "datapilot@1"
+        },
+        {
+          "command": "dbtPowerUser.summarizeQuery",
+          "group": "datapilot@2"
+        },
+        {
+          "command": "dbtPowerUser.changeQuery",
+          "group": "datapilot@3"
+        }
+      ],
       "editor/title": [
         {
           "command": "dbtPowerUser.executeSQL",
@@ -469,6 +520,11 @@
       ],
       "editor/context": [
         {
+          "submenu": "dbtPowerUser.datapilotSubmenu",
+          "group": "datapilot@1",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
+        },
+        {
           "submenu": "dbtPowerUser.buildModel",
           "group": "dbt@5",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
@@ -497,11 +553,6 @@
           "command": "dbtPowerUser.runCurrentModel",
           "group": "dbt@1",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
-        },
-        {
-          "command": "dbtPowerUser.summarizeQuery",
-          "group": "dbt@3",
-          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey"
         },
         {
           "command": "dbtPowerUser.sqlToModel",
@@ -575,7 +626,12 @@
         {
           "command": "dbtPowerUser.resetDatapilot",
           "when": "view == dbtPowerUser.datapilot-webview",
-          "group": "navigation"
+          "group": "navigation@1"
+        },
+        {
+          "command": "dbtPowerUser.showHelpDatapilot",
+          "when": "view == dbtPowerUser.datapilot-webview",
+          "group": "navigation@3"
         }
       ],
       "view/item/context": [
@@ -631,6 +687,10 @@
           "light": "./media/images/build-model_light.svg",
           "dark": "./media/images/build-model_dark.svg"
         }
+      },
+      {
+        "id": "dbtPowerUser.datapilotSubmenu",
+        "label": "Datapilot"
       }
     ],
     "languages": [
