--- a/webview_panels/tsconfig.json
+++ b/webview_panels/tsconfig.json
@@ -27,7 +27,8 @@
       "@uicore": ["src/uiCore/index.ts"],
       "@assets/*": ["src/assets/*"],
       "@modules/*": ["src/modules/*"],
-      "@testUtils": ["src/testUtils/index.ts"]
+      "@testUtils": ["src/testUtils/index.ts"],
+      "@vscodeApi": ["src/modules/vscode/index.ts"]
     }
   },
   "include": ["src", "vite.config.ts"],
