--- a/package.json
+++ b/package.json
@@ -78,6 +78,11 @@
             "type": "boolean",
             "description": "Enable the new query panel in dbt.",
             "default": true
+          },
+          "dbt.enableValidateSQLOnSave": {
+            "type": "boolean",
+            "description": "Enable the SQL validation on model save.",
+            "default": false
           }
         }
       },
