fix: text changes + documentation

--- a/package.json
+++ b/package.json
@@ -224,7 +224,7 @@
         },
         {
           "id": "insights_view",
-          "title": "Insights",
+          "title": "Actions",
           "icon": "./media/images/dbt_icon.svg"
         }
       ]
