--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -35,6 +35,7 @@
     "react-textarea-autosize": "^8.5.3",
     "reactstrap": "^9.2.1",
     "vite-plugin-svgr": "^4.2.0",
+    "yaml": "^2.4.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
