--- a/webview_panels/tsconfig.json
+++ b/webview_panels/tsconfig.json
@@ -21,6 +21,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "downlevelIteration": true,
     "baseUrl": ".",
     "paths": {
       "@uicore": ["src/uiCore/index.ts"],
