--- a/package.json
+++ b/package.json
@@ -846,7 +846,7 @@
             "id": "pickProject",
             "title": "%walkthrough.initialSetup.steps.pickProject.title%",
             "description": "%walkthrough.initialSetup.steps.pickProject.description%",
-            "when": "dbtPowerUser.isDBTCore && dbtPowerUser.projectCount > 1",
+            "when": "dbtPowerUser.dbtIntegration === 'core' && dbtPowerUser.projectCount > 1",
             "media": {
               "markdown": "media/pickProject.md"
             },
@@ -858,7 +858,7 @@
             "id": "installDeps",
             "title": "%walkthrough.initialSetup.steps.installDeps.title%",
             "description": "%walkthrough.initialSetup.steps.installDeps.description%",
-            "when": "dbtPowerUser.isDBTCore && dbtPowerUser.walkthroughProjectSelected",
+            "when": "dbtPowerUser.dbtIntegration === 'core' && dbtPowerUser.walkthroughProjectSelected",
             "media": {
               "markdown": "media/installDeps.md"
             },
@@ -870,7 +870,7 @@
             "id": "validateProject",
             "title": "%walkthrough.initialSetup.steps.validateProject.title%",
             "description": "%walkthrough.initialSetup.steps.validateProject.description%",
-            "when": "dbtPowerUser.isDBTCore && dbtPowerUser.walkthroughProjectSelected",
+            "when": "dbtPowerUser.dbtIntegration === 'core' && dbtPowerUser.walkthroughProjectSelected",
             "media": {
               "markdown": "media/validateProject.md"
             },
