--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -34,6 +34,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "reactstrap": "^9.2.1",
+    "remark-gfm": "^4.0.0",
     "vite-plugin-svgr": "^4.2.0",
     "yaml": "^2.4.1",
     "yup": "^1.3.3"
