--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -27,6 +27,7 @@
     "react-code-blocks": "^0.1.6",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
